Altera a pasta da Fonte

--- a/style/styleandroid.css
+++ b/style/styleandroid.css
@@ -6,7 +6,7 @@
 
   @font-face {
     font-family: 'Android';
-    src: url('/pratica2/fontes/idroid.otf') format('opentype');
+    src: url('../fontes/idroid.otf') format('opentype');
   }
 
 :root{
