--- a/style/styleandroid.css
+++ b/style/styleandroid.css
@@ -60,23 +60,41 @@ nav{
     padding-left: 10px;
 
 }
-nav a{
-    
-    color: white;
+nav li > a{
+    display: block;
+    text-align: center;
     text-decoration: none;
-    padding: 5px;
-    font-size: 20px;
-    
+    color: white;
+    font-size: 1.5em;
+    padding: 5px 7px;
+
 }
-nav a:hover{
+ /* --- Change de background with hover*/
+nav li > a:hover:not(.active){
     background-color: var(--cor05);
     text-decoration: underline;
-    color: var(--cor06);
-    border-radius: 5px;
+    color: var(--cor06); 
     transition-duration: 0.5s;
+    border-radius: 5px;
+    
    
     
 }
+nav ul{
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+}
+nav li{
+    display: inline;
+    float: left; 
+}
+/*
+.active {
+    background-color: var(--cor07);
+}
+*/
 main{
     background-color: white;
     margin: auto;
@@ -174,9 +192,10 @@ aside > h3{
     
 }
 aside ul{
-    list-style-position: inside;
+    padding-left: 5px;
     columns: 2;
     font-size: 1.1em;
+    list-style-type: none;
 }
 div.video{
     background-color: var(--cor04);
