--- a/style/styleandroid.css
+++ b/style/styleandroid.css
@@ -150,6 +150,7 @@ main a{
     
     
 }
+/*Make change when pass de mouse on link*/
 main a:hover{
     text-decoration: underline;
     color: var(--cor06);
@@ -159,6 +160,7 @@ main strong{
     color: var(--cor04);
     font-style: italic;
 }
+/*Code of icon link*/
 a.linkexterno::after{
     content: '\1F517';
 
@@ -197,6 +199,7 @@ aside ul{
     font-size: 1.1em;
     list-style-type: none;
 }
+/* Make de video responsive*/
 div.video{
     background-color: var(--cor04);
     margin: 0px 0px 30px 0px ;
