--- a/style/styleandroid.css
+++ b/style/styleandroid.css
@@ -34,8 +34,11 @@ body{
     
 }
 header{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
     background-image: linear-gradient(to bottom, var(--cor05), var(--cor05) );
-    min-height: 170px;
     box-shadow: 10px 10px 10px -30px black;
 }
 header h1{
